Saved CSS Design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>
@@ -27,6 +28,9 @@
         <p>Skills: N/A</p>
         <p>Language Known: Filipino, English</p>
         <p>References: N/A</p>
+    </div>
+
+    <div class="video">
     </div>
 </body>
 </html>
