Add Profile Picture

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>
         College of Computer Studies
@@ -15,22 +17,27 @@
     </h2>
 
     <div>
-        <p>Full Name: Maria Shina Jane A. Melendres</p>
-        <p>Date of Birth: December 25, 2002</p>
-        <p>Gender: Female</p>
-        <p>Contact Number: 09636455571</p>
-        <p>Email Address: melendresshina@gmail.com</p>
-        <p>Address: Bagacay, Talibon, Bohol</p>
-        <p>Nationality: Filipino</p>
-        <p>Marital Status: Single</p>
-        <p>Education Qualification: College UnderGraduate</p>
-        <p>Work Experience: N/A</p>
-        <p>Skills: N/A</p>
-        <p>Language Known: Filipino, English</p>
-        <p>References: N/A</p>
+        <img src="profile.jpg" width="300px" height="300px" class="center" alt="avatar">
+        <p class="biodata">BIODATA</p>
+        <div class="info">
+            <p class="first">Full Name: Maria Shina Jane A. Melendres</p>
+            <p>Date of Birth: December 25, 2002</p>
+            <p>Gender: Female</p>
+            <p>Contact Number: 09636455571</p>
+            <p>Email Address: melendresshina@gmail.com</p>
+            <p>Address: Bagacay, Talibon, Bohol</p>
+            <p>Nationality: Filipino</p>
+            <p>Marital Status: Single</p>
+            <p>Education Qualification: College UnderGraduate</p>
+            <p>Work Experience: N/A</p>
+            <p>Skills: N/A</p>
+            <p>Language Known: Filipino, English</p>
+            <p>References: N/A</p>
+        </div>
     </div>
 
     <div class="video">
     </div>
 </body>
+
 </html>
