Add Favorite Audio and Video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h2>
 
     <div>
-        <img src="profile.jpg" width="300px" height="300px" class="center" alt="avatar">
+        <img src="profile.jpg" width="300px" height="300px" class="img" alt="avatar">
         <p class="biodata">BIODATA</p>
         <div class="info">
             <p class="first">Full Name: Maria Shina Jane A. Melendres</p>
@@ -36,8 +36,16 @@
         </div>
     </div>
 
-    <div class="video">
-    </div>
+    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;">Favorite Audio</p>
+
+    <audio controls>
+        <source src="issue.mp3" type="audio/mp3">
+    </audio>
+
+    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;">Favorite Video</p>
+    <video width="700" height="400" controls>
+        <source src="hymn.mp4" type="video/mp4">
+    </video>
 </body>
 
 </html>
