--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 
 <body>
+    <ul style="background-color: skyblue; height: 60px;">
+        <p id="datetime" style="font-size: 30px; padding-top: 13px; text-align: end; padding-right: 20px;"></p>
+    </ul>
     <h1>
         College of Computer Studies
     </h1>
+
     <h2>
         Block 1
     </h2>
-
     <div>
         <img src="profile.jpg" width="300px" height="300px" class="img" alt="avatar">
+
         <p class="biodata">BIODATA</p>
         <div class="info">
             <p class="first">Full Name: Maria Shina Jane A. Melendres</p>
@@ -36,16 +40,17 @@
         </div>
     </div>
 
-    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;">Favorite Audio</p>
-
+    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;  font-family: Arial;">Favorite Audio</p>
     <audio controls>
         <source src="issue.mp3" type="audio/mp3">
     </audio>
 
-    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;">Favorite Video</p>
+    <p style="margin-left: 300px;margin-top: 50px; font-size: 28px;  font-family: Arial;">Favorite Video</p>
     <video width="700" height="400" controls>
         <source src="hymn.mp4" type="video/mp4">
     </video>
+
+    <script src="currentDateTime.js"></script>
 </body>
 
 </html>
